# ProjectAI

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Setup.sh  scan.txt
Documentation/Pictures/: IMG_1836.HEIC
PDF Source/: SadraASCII.psd
Python/: CameraTest.py  Main.py  MotorTest.py  MotorTester.py  Plot.py  ProjectAI.py  ProjectAI2.py  config.txt  test.py  winner.pkl
Python/AI/: DistanceNodes.npy  DistanceNodes.txt  InputNodes.npy  InputNodes.txt  Lidar.tflite  Main.py  model.tflite  weights.npy
Python/TrackTest/: config.txt  main.py
Source/: CMakeLists.txt
Source/include/: CommonHeaders.h  Driver.h  GPIO.h  HTTP.h  Helpers.h  Lidar.h  Log.h  Main.h  Timer.h
Source/includes/: Definitions.h
Source/src/: CMakeLists.txt  Driver.cpp  GPIO.cpp  HTTP.cpp  Lidar.cpp  Log.cpp  Main.cpp
WebServer/: index.html  script.js  style.css
